# EmployeeManageQA

./: TESTING_STRATEGY.md  conftest.py  pyproject.toml  pytest.ini  pytest_config_plugin.py  requirements.txt
Tests/API/: api_status_tests.py  example_api_tests.py
Tests/API/admin/: Login_Successful.py  Login_Unsuccessful_Attempt_No_Login.py  Login_Unsuccessful_Response.py
Tests/API/employee/: Add_Employee_Skill_Successful.py  Add_Skill_Successful.py  Add_Skill_Unsuccessful.py  Create_Employee_Successful.py  Create_Employee_Unsuccessful.py  Delete_Employee_Successful.py  Delete_Employee_Unsuccessful.py  Get_Employees_Edge_Cases.py  Get_Employees_Successful.py  Get_Employees_Unsuccessful.py  Remove_Skill_Successful.py  Remove_Skill_Unsuccessful.py  Update_Employee_Successful.py  Update_Employee_Unsuccessful.py
Tests/API/security/: SQL_Injection_Protection.py
Tests/API/skill/: Create_Skill_Successful.py  Create_Skill_Unsuccessful.py  Delete_Skill_Successful.py  Delete_Skill_Unsuccessful.py  Get_Skills_Successful.py  Get_Skills_Unsuccessful.py  Update_Skill_Successful.py  Update_Skill_Unsuccessful.py
Tests/UI/: example_ui_tests.py
Tests/UI/authentication/: Employee_Page_Not_Accessible_Without_Login.py  Skill_Page_Not_Accessible_Without_Login.py
Tests/UI/employees/: Create_Employee_Via_UI.py  Manage_Employee_Skills_Via_UI.py  Update_Employee_Via_UI.py  Validate_Employees_Search.py  Validate_Skill_List_in_Add_Skill.py  Validate_Skill_List_in_Remove_Skill.py
Tests/UI/header/: Navigate_To_Employees_Tab.py  Navigate_To_Login.py  Navigate_To_Skills_Tab.py
Tests/UI/login/: Login_Failed_Attempt.py
Tests/UI/skills/: Create_Skill_Via_UI.py  Update_Skill_Via_UI.py  Validate_Skills_Search.py
config/: api_test_configuration.json  pytest_config_loader.py  selenium_action_utils.py  ui_test_configuration.json
data/: employees.py  skills.py
functions/: employee.py  pages.py  skill.py
functions/ui/: skill.py
locators/components/: container.py  employee_skill_modal.py  header.py
locators/pages/: employees.py  login.py  skills.py
